# stm32f7-blinky

./: .gitignore  Cargo.toml  memory.x
.cargo/: config
src/: main.rs
