[package]
name = "blinky"
version = "0.1.0"
authors = ["Joao Rebelo <2730147+jrebelo@users.noreply.github.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"

[dependencies.stm32f7]
version = "0.8.0"
features = ["stm32f7x6", "rt"]

[dependencies.cortex-m-rt]
version = "0.6.10"
features = ["device"]